Add scroll-to-top button functionality, enhance footer styles, and update tour promo component layout

--- a/src/app/module/tour/component/tour-card/tour-card.component.html
+++ b/src/app/module/tour/component/tour-card/tour-card.component.html
@@ -68,7 +68,9 @@
                         Tour Highlights
                     </button>
                 </div>
+                
             </div>
+            <p class="per-person-info">Per Person (Min. {{tour.minPersons}} Paying Pax Required)</p>
         </div>
 
         <div class="action-buttons" @slideIn>
