--- a/src/app/module/tour/tour.component.html
+++ b/src/app/module/tour/tour.component.html
@@ -43,3 +43,12 @@
 </main>
 <app-footer></app-footer>
 <app-tour-promo #enquiryModal></app-tour-promo>
+<button class="scroll-top-button" [class.visible]="showScrollButton" (click)="scrollToTop()" [@fadeInOut]>
+    <div class="progress-circle">
+        <svg viewBox="0 0 36 36">
+            <path d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
+                [style.strokeDasharray]="circumference" [style.strokeDashoffset]="dashOffset" />
+        </svg>
+    </div>
+    <i class="ri-arrow-up-line"></i>
+</button>
