--- a/src/app/module/tour/component/tour-card/tour-card.component.scss
+++ b/src/app/module/tour/component/tour-card/tour-card.component.scss
@@ -107,8 +107,8 @@ swiper-container {
   align-items: center;
   gap: 4px;
   font-size: 12px;
-  color: #fff;
-  background: rgba(1, 123, 110, 0.2);
+  color: #000;
+  background: rgb(255 87 34 / 34%);
   z-index: 10;
 }
 
@@ -488,4 +488,9 @@ swiper-container {
       }
     }
   }
+}
+
+.per-person-info{
+  color: #4b4b4b;
+  font-size: 10px;
 }
